# contextual-encoders

./: .gitignore  README.md  examples.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python.yml
contextual_encoders/: __init__.py  aggregator.py  comparer.py  computer.py  context.py  data_utils.py  encoder.py  gatherer.py  google_comparer.py  inverter.py  measure.py  reducer.py
docs/: api_reference.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/source/: api_reference.rst  conf.py  examples.rst  index.rst
docs/source/_static/: weekdays.drawio
tests/: test_context.py
